--- a/openapi/pom.xml
+++ b/openapi/pom.xml
@@ -16,146 +16,239 @@
   ~ limitations under the License.
   -->
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <modelVersion>4.0.0</modelVersion>
+  <modelVersion>4.0.0</modelVersion>
 
-    <parent>
-        <groupId>org.apache.celeborn</groupId>
-        <artifactId>celeborn-parent_${scala.binary.version}</artifactId>
-        <version>${project.version}</version>
-        <relativePath>../pom.xml</relativePath>
-    </parent>
+  <parent>
+    <groupId>org.apache.celeborn</groupId>
+    <artifactId>celeborn-parent_${scala.binary.version}</artifactId>
+    <version>${project.version}</version>
+    <relativePath>../pom.xml</relativePath>
+  </parent>
 
-    <artifactId>celeborn-openapi_${scala.binary.version}</artifactId>
-    <packaging>jar</packaging>
-    <name>Celeborn Open API</name>
+  <artifactId>celeborn-openapi_${scala.binary.version}</artifactId>
+  <packaging>jar</packaging>
+  <name>Celeborn Open API</name>
 
+  <properties>
+    <project.service.baseDir>${project.basedir}/../service</project.service.baseDir>
+  </properties>
+
+  <dependencyManagement>
     <dependencies>
-        <dependency>
-            <groupId>org.openapitools</groupId>
-            <artifactId>jackson-databind-nullable</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>com.google.code.findbugs</groupId>
-            <artifactId>jsr305</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.glassfish.jersey.core</groupId>
-            <artifactId>jersey-client</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.glassfish.jersey.media</groupId>
-            <artifactId>jersey-media-json-jackson</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>com.fasterxml.jackson.core</groupId>
-            <artifactId>jackson-annotations</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>com.fasterxml.jackson.core</groupId>
-            <artifactId>jackson-databind</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>com.fasterxml.jackson.datatype</groupId>
-            <artifactId>jackson-datatype-jsr310</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.glassfish.jersey.media</groupId>
-            <artifactId>jersey-media-multipart</artifactId>
-        </dependency>
+      <dependency>
+        <groupId>org.glassfish.jersey.core</groupId>
+        <artifactId>jersey-client</artifactId>
+        <version>${jersey.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>com.fasterxml.jackson.datatype</groupId>
+        <artifactId>jackson-datatype-jsr310</artifactId>
+        <version>${jackson.version}</version>
+      </dependency>
     </dependencies>
+  </dependencyManagement>
 
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.openapitools</groupId>
-                <artifactId>openapi-generator-maven-plugin</artifactId>
-                <executions>
-                    <execution>
-                        <id>generate-java-master-rest-v1</id>
-                        <goals>
-                            <goal>generate</goal>
-                        </goals>
-                        <phase>generate-sources</phase>
-                        <configuration>
-                            <inputSpec>${project.basedir}/src/main/openapi3/master_rest_v1.yaml</inputSpec>
-                            <output>${project.build.directory}/generated-sources/java</output>
-                            <apiPackage>org.apache.celeborn.rest.v1.master</apiPackage>
-                            <modelPackage>org.apache.celeborn.rest.v1.model</modelPackage>
-                            <invokerPackage>org.apache.celeborn.rest.v1.master.invoker</invokerPackage>
-                            <generatorName>java</generatorName>
-                            <groupId>${groupId}</groupId>
-                            <artifactId>${artifactId}</artifactId>
-                            <artifactVersion>${project.version}</artifactVersion>
-                            <addCompileSourceRoot>true</addCompileSourceRoot>
-                            <configOptions>
-                                <licenseName>Apache License 2.0</licenseName>
-                                <groupId>${groupId}</groupId>
-                                <artifactId>${artifactId}</artifactId>
-                                <artifactVersion>${project.version}</artifactVersion>
-                                <dateLibrary>java8</dateLibrary>
-                                <useGzipFeature>true</useGzipFeature>
-                                <!--
-                                When using jdk11+, use the following line to generate native java code.
-                                <library>native</library>
-                                -->
-                                <library>jersey2</library>
-                                <annotationLibrary>none</annotationLibrary>
-                            </configOptions>
-                        </configuration>
-                    </execution>
-                    <execution>
-                        <id>generate-java-worker-rest-v1</id>
-                        <goals>
-                            <goal>generate</goal>
-                        </goals>
-                        <phase>generate-sources</phase>
-                        <configuration>
-                            <inputSpec>${project.basedir}/src/main/openapi3/worker_rest_v1.yaml</inputSpec>
-                            <output>${project.build.directory}/generated-sources/java</output>
-                            <apiPackage>org.apache.celeborn.rest.v1.worker</apiPackage>
-                            <modelPackage>org.apache.celeborn.rest.v1.model</modelPackage>
-                            <invokerPackage>org.apache.celeborn.rest.v1.worker.invoker</invokerPackage>
-                            <generatorName>java</generatorName>
-                            <groupId>${groupId}</groupId>
-                            <artifactId>${artifactId}</artifactId>
-                            <artifactVersion>${project.version}</artifactVersion>
-                            <addCompileSourceRoot>true</addCompileSourceRoot>
-                            <configOptions>
-                                <licenseName>Apache License 2.0</licenseName>
-                                <groupId>${groupId}</groupId>
-                                <artifactId>${artifactId}</artifactId>
-                                <artifactVersion>${project.version}</artifactVersion>
-                                <dateLibrary>java8</dateLibrary>
-                                <useGzipFeature>true</useGzipFeature>
-                                <!--
-                                When using jdk11+, use the following line to generate native java code.
-                                <library>native</library>
-                                -->
-                                <library>jersey2</library>
-                                <annotationLibrary>none</annotationLibrary>
-                            </configOptions>
-                        </configuration>
-                    </execution>
-                </executions>
-            </plugin>
-            <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>build-helper-maven-plugin</artifactId>
-                <executions>
-                    <execution>
-                        <id>add-source</id>
-                        <goals>
-                            <goal>add-source</goal>
-                        </goals>
-                        <phase>generate-sources</phase>
-                        <configuration>
-                            <sources>
-                                <source>${project.basedir}/target/generated-sources/java/src/gen/java</source>
-                            </sources>
-                        </configuration>
-                    </execution>
-                </executions>
-            </plugin>
-        </plugins>
-    </build>
+  <dependencies>
+    <dependency>
+      <groupId>org.openapitools</groupId>
+      <artifactId>jackson-databind-nullable</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>com.google.code.findbugs</groupId>
+      <artifactId>jsr305</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.glassfish.jersey.core</groupId>
+      <artifactId>jersey-client</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.glassfish.jersey.media</groupId>
+      <artifactId>jersey-media-json-jackson</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>com.fasterxml.jackson.core</groupId>
+      <artifactId>jackson-annotations</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>com.fasterxml.jackson.core</groupId>
+      <artifactId>jackson-databind</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>com.fasterxml.jackson.datatype</groupId>
+      <artifactId>jackson-datatype-jsr310</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.glassfish.jersey.media</groupId>
+      <artifactId>jersey-media-multipart</artifactId>
+    </dependency>
+  </dependencies>
+
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>org.openapitools</groupId>
+        <artifactId>openapi-generator-maven-plugin</artifactId>
+        <executions>
+          <execution>
+            <id>generate-java-master-rest-v1</id>
+            <goals>
+              <goal>generate</goal>
+            </goals>
+            <phase>generate-sources</phase>
+            <configuration>
+              <inputSpec>${project.basedir}/src/main/openapi3/master_rest_v1.yaml</inputSpec>
+              <output>${project.build.directory}/generated-sources/java</output>
+              <apiPackage>org.apache.celeborn.rest.v1.master</apiPackage>
+              <modelPackage>org.apache.celeborn.rest.v1.master.model</modelPackage>
+              <invokerPackage>org.apache.celeborn.rest.v1.master.invoker</invokerPackage>
+              <generatorName>java</generatorName>
+              <generateApiTests>false</generateApiTests>
+              <generateModelTests>false</generateModelTests>
+              <groupId>${groupId}</groupId>
+              <artifactId>${artifactId}</artifactId>
+              <artifactVersion>${project.version}</artifactVersion>
+              <addCompileSourceRoot>false</addCompileSourceRoot>
+              <cleanupOutput>true</cleanupOutput>
+              <configOptions>
+                <licenseName>Apache License 2.0</licenseName>
+                <groupId>${groupId}</groupId>
+                <artifactId>${artifactId}</artifactId>
+                <artifactVersion>${project.version}</artifactVersion>
+                <dateLibrary>java8</dateLibrary>
+                <useGzipFeature>true</useGzipFeature>
+                <!--
+                When using jdk11+, use the following line to generate native java code.
+                <library>native</library>
+                -->
+                <library>jersey2</library>
+                <!--
+                When upgrading openapi-generator to 7.x+, which does not support JDK8,
+                use the following line to annotations with io.swagger.core.v3:swagger-annotations.
+                <annotationLibrary>swagger2</annotationLibrary>
+                -->
+                <annotationLibrary>none</annotationLibrary>
+              </configOptions>
+            </configuration>
+          </execution>
+          <execution>
+            <id>generate-java-worker-rest-v1</id>
+            <goals>
+              <goal>generate</goal>
+            </goals>
+            <phase>generate-sources</phase>
+            <configuration>
+              <inputSpec>${project.basedir}/src/main/openapi3/worker_rest_v1.yaml</inputSpec>
+              <output>${project.build.directory}/generated-sources/java</output>
+              <apiPackage>org.apache.celeborn.rest.v1.worker</apiPackage>
+              <modelPackage>org.apache.celeborn.rest.v1.worker.model</modelPackage>
+              <invokerPackage>org.apache.celeborn.rest.v1.worker.invoker</invokerPackage>
+              <generatorName>java</generatorName>
+              <generateApiTests>false</generateApiTests>
+              <generateModelTests>false</generateModelTests>
+              <groupId>${groupId}</groupId>
+              <artifactId>${artifactId}</artifactId>
+              <artifactVersion>${project.version}</artifactVersion>
+              <addCompileSourceRoot>false</addCompileSourceRoot>
+              <configOptions>
+                <licenseName>Apache License 2.0</licenseName>
+                <groupId>${groupId}</groupId>
+                <artifactId>${artifactId}</artifactId>
+                <artifactVersion>${project.version}</artifactVersion>
+                <dateLibrary>java8</dateLibrary>
+                <useGzipFeature>true</useGzipFeature>
+                <!--
+                When using jdk11+, use the following line to generate native java code.
+                <library>native</library>
+                -->
+                <library>jersey2</library>
+                <!--
+                When upgrading openapi-generator to 7.x+, which does not support JDK8,
+                use the following line to annotations with io.swagger.core.v3:swagger-annotations.
+                <annotationLibrary>swagger2</annotationLibrary>
+                -->
+                <annotationLibrary>none</annotationLibrary>
+              </configOptions>
+            </configuration>
+          </execution>
+          <execution>
+            <id>generate-java-service-model-rest-v1</id>
+            <goals>
+              <goal>generate</goal>
+            </goals>
+            <phase>generate-sources</phase>
+            <configuration>
+              <inputSpec>${project.basedir}/src/main/openapi3/schemas_rest_v1.yaml</inputSpec>
+              <output>${project.build.directory}/generated-sources/service/java</output>
+              <modelPackage>org.apache.celeborn.server.common.http.v1.model</modelPackage>
+              <generatorName>java</generatorName>
+              <generateApiTests>false</generateApiTests>
+              <generateModelTests>false</generateModelTests>
+              <groupId>${groupId}</groupId>
+              <artifactId>${artifactId}</artifactId>
+              <artifactVersion>${project.version}</artifactVersion>
+              <addCompileSourceRoot>false</addCompileSourceRoot>
+              <skipValidateSpec>true</skipValidateSpec>
+              <configOptions>
+                <licenseName>Apache License 2.0</licenseName>
+                <groupId>${groupId}</groupId>
+                <artifactId>${artifactId}</artifactId>
+                <artifactVersion>${project.version}</artifactVersion>
+                <dateLibrary>java8</dateLibrary>
+                <useGzipFeature>true</useGzipFeature>
+                <library>jersey2</library>
+                <annotationLibrary>none</annotationLibrary>
+                <hideGenerationTimestamp>true</hideGenerationTimestamp>
+              </configOptions>
+            </configuration>
+          </execution>
+        </executions>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-resources-plugin</artifactId>
+        <executions>
+          <execution>
+            <id>copy-resources</id>
+            <goals>
+              <goal>copy-resources</goal>
+            </goals>
+            <phase>generate-resources</phase>
+            <configuration>
+              <outputDirectory>${project.service.baseDir}/src/main/java/org/apache/celeborn/server/common/http/v1</outputDirectory>
+              <resources>
+                <resource>
+                  <directory>${project.build.directory}/generated-sources/service/java/src/main/java/org/apache/celeborn/server/common/http/v1</directory>
+                  <includes>
+                    <include>model/*.java</include>
+                    <!-- referenced by model java files in unused imports -->
+                    <include>ApiException.java</include>
+                    <include>JSON.java</include>
+                    <include>RFC3339DateFormat.java</include>
+                  </includes>
+                </resource>
+              </resources>
+            </configuration>
+          </execution>
+        </executions>
+      </plugin>
+      <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>build-helper-maven-plugin</artifactId>
+        <executions>
+          <execution>
+            <id>add-source</id>
+            <goals>
+              <goal>add-source</goal>
+            </goals>
+            <phase>generate-sources</phase>
+            <configuration>
+              <sources>
+                <source>${project.build.directory}/generated-sources/java/src/main/java</source>
+              </sources>
+            </configuration>
+          </execution>
+        </executions>
+      </plugin>
+    </plugins>
+  </build>
 </project>
