--- a/service/pom.xml
+++ b/service/pom.xml
@@ -164,6 +164,11 @@
       <artifactId>jetty-proxy</artifactId>
     </dependency>
 
+    <dependency>
+      <groupId>org.openapitools</groupId>
+      <artifactId>jackson-databind-nullable</artifactId>
+    </dependency>
+
     <!-- Test dependencies -->
     <dependency>
       <groupId>org.mockito</groupId>
