--- a/openapi/src/main/openapi3/master_rest_v1.yaml
+++ b/openapi/src/main/openapi3/master_rest_v1.yaml
@@ -21,7 +21,7 @@ servers:
 security:
   - basic: []
 info:
-  title: Celeborn Master REST API
+  title: Celeborn REST API
   license:
     name: Apache 2.0
     url: https://www.apache.org/licenses/LICENSE-2.0.html
